# capstone-thermal-sensor-component

./: .gitignore  Dockerfile  Dockerfile.dev  Readme.md  docker-compose.visualizer-test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
scripts/: run_visual_stack.sh
src/capstone_thermal_sensor/: Img_predictor.py  best_thermal_human_V1.keras  frame_writer.py  main.py  thermal_camera_pub.py  visualize.py
src/capstone_thermal_sensor/config/: __init__.py  config.py  config.yml
src/capstone_thermal_sensor/visualizer/: visualize.py  visualize_sender.py
templates/: index.html
tests/: test_capstone_thermal_sensor.py  test_thermal_camera_pub.py
tests_visualizer/: README.md  generate_sequence.py  play_png_sequence.py
