[tool.poetry]
name = "capstone-thermal-sensor"
version = "0.1.0"
description = ""
authors = ["kmiya <miyak19@mytru.ca>"]
packages = [{include = "capstone_thermal_sensor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
msg-handler = {git = "https://github.com/TRU-Capstone-2026-WheelChock/wheelchoke-system-communication-system.git"}
fastapi = "^0.134.0"
pandas = "^2.2.0"
adafruit-circuitpython-mlx90640 = "^1.3.7"
opencv-python = "^4.13.0.92"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
